# futurista

./: .gitignore  LICENSE.md  README.md  core.py  futurista.py  futurista.py_OLD  futurista_app.py  futurista_interativo.ipynb  futurista_streamlit.py  futurista_streamlit_enhanced.py  pyproject.toml  relatorio_juros_inflacao.md  requirements.txt  setup.py  top_juros_inflacao.csv
.opencode/: opencode.db  opencode.db-shm  opencode.db-wal
futurista/: __init__.py  data_loader.py  exporter.py  visualizer.py  visualizer.py.bak  visualizer_new.py
futurista.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: run_futurista.bat  run_futurista.sh
