[project]
name = "futurista"
version = "0.1.0"
description = "Análise interativa de juros reais e inflação com dados do Banco Mundial"
authors = [{name="Peder", email="seuemail@exemplo.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "pandas",
    "world_bank_data",
    "pycountry",
    "plotly",
    "ipywidgets"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

